{
    "name": "SteeringWheelInput",
    "maps": [
        {
            "name": "SteeringWheel",
            "id": "183b8e9d-988d-415b-8c86-3479c78d6714",
            "actions": [
                {
                    "name": "RotateWheel",
                    "type": "PassThrough",
                    "id": "5b14d9e0-a425-4130-94be-ef18dab197f4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "X",
                    "type": "PassThrough",
                    "id": "eaaa51b3-89d9-464e-ac7f-2a7ef4cd1e35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "PassThrough",
                    "id": "fdbff4be-9094-4ec3-b134-5d6e80d32cbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A",
                    "type": "PassThrough",
                    "id": "849f83ee-854d-45fa-81ba-e20e40658001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "PassThrough",
                    "id": "61d0ad9b-2eb2-40ec-9975-0335434c7a8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "PassThrough",
                    "id": "31459691-a40a-4f31-89fe-ff2ac1034956",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "PassThrough",
                    "id": "58f7d61b-21fc-40ab-a3f3-eac60a06dfd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "PassThrough",
                    "id": "4fd3c7a9-5475-4698-90bf-7519013df461",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "PassThrough",
                    "id": "999092dd-bac1-4c17-bd85-0cc9542ac5a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WheelLeftTriggerBt",
                    "type": "PassThrough",
                    "id": "3cf85671-8fc3-41dd-8332-3231c287e7df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WheelRightTriggerBt",
                    "type": "PassThrough",
                    "id": "c4e05df0-9652-4a7b-a2c9-6f3392c8ad56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GearShiftUp",
                    "type": "PassThrough",
                    "id": "4549a32b-64f6-4a48-a158-1b6a1fe2e2c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GearShiftDown",
                    "type": "PassThrough",
                    "id": "f8150c16-a4cb-40c7-bcf1-b1886014457e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21f5700b-2849-4355-b9be-461ad5599df4",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e4513c6-a6a9-44dc-ab95-5229f0d0b961",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a285239a-1cdb-41bf-9b8c-6bf5dac42bff",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8abc49b7-b6d1-4a1d-a14f-b16a18cf98df",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "905d4a27-ffb8-4221-864a-fae1f1e6b06b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78a19a3a-b429-4891-aedb-845ce4041279",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d40cb0bd-cb23-4900-8e7e-c1ab9df38f21",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a63164c-ba50-4bf3-a4b2-da8861d59439",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "126b6043-1cea-4d80-a85d-79c28c9f7d7d",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f02b408-7752-48f7-96dc-c29de19c8efc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearShiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a787b9ce-2a10-4efb-88ae-bcab6b6e7bd9",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearShiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc2a29d6-8ea3-4a86-88d8-e48ab43d87fa",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WheelRightTriggerBt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a91e17d6-5841-4182-bba7-30af7a5b9035",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WheelLeftTriggerBt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}